@@ -1,8 +1,8 @@
 package com.tatiana.workshop_mongodb.config;
 
 import java.text.SimpleDateFormat;
+import java.util.Arrays;
 import java.util.Date;
-import java.util.List;
 import java.util.TimeZone;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -38,12 +38,15 @@ public class Instantiation implements CommandLineRunner {
         User alex = new User(null, "Alex Green", "alex@gmail.com");
         User bob = new User(null, "Bob Grey", "bob@gmail.com");
 
-        userRepository.saveAll(List.of(maria, alex, bob));
+        userRepository.saveAll(Arrays.asList(maria, alex, bob));
 
         Post post1 = new Post(null, date, "Partiu viagem", "Vou viajar para São Paulo. Abraços!", new AuthorDTO(maria));
         Post post2 = new Post(null, date, "Bom dia", "Acordei feliz hoje!", new AuthorDTO(maria));
 
-        postRepository.saveAll(List.of(post1, post2));
+        postRepository.saveAll(Arrays.asList(post1, post2));
+
+        maria.getPosts().addAll(Arrays.asList(post1, post2));
+        userRepository.save(maria);
     }
 
 }
